Done swagger for Dentist and Patients
