# docs/swagger.json
@@ -33,8 +33,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "privateKey",
-                        "name": "PRIVATE-KEY",
+                        "description": "secretKey",
+                        "name": "SECRET_KEY",
                         "in": "header",
                         "required": true
                     },
@@ -78,8 +78,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "privateKey",
-                        "name": "PRIVATE-KEY",
+                        "description": "secretKey",
+                        "name": "SECRET_KEY",
                         "in": "header",
                         "required": true
                     },
@@ -119,8 +119,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "privateKey",
-                        "name": "PRIVATE-KEY",
+                        "description": "secretKey",
+                        "name": "SECRET_KEY",
                         "in": "header",
                         "required": true
                     },
@@ -160,8 +160,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "privateKey",
-                        "name": "PRIVATE-KEY",
+                        "description": "secretKey",
+                        "name": "SECRET_KEY",
                         "in": "header",
                         "required": true
                     },
@@ -201,8 +201,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "privateKey",
-                        "name": "PRIVATE-KEY",
+                        "description": "secretKey",
+                        "name": "SECRET_KEY",
                         "in": "header",
                         "required": true
                     },
@@ -244,8 +244,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "privateKey",
-                        "name": "PRIVATE-KEY",
+                        "description": "secretKey",
+                        "name": "SECRET_KEY",
                         "in": "header",
                         "required": true
                     },
@@ -289,8 +289,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "privateKey",
-                        "name": "PRIVATE-KEY",
+                        "description": "secretKey",
+                        "name": "SECRET_KEY",
                         "in": "header",
                         "required": true
                     },
@@ -330,8 +330,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "privateKey",
-                        "name": "PRIVATE-KEY",
+                        "description": "secretKey",
+                        "name": "SECRET_KEY",
                         "in": "header",
                         "required": true
                     },
@@ -371,8 +371,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "privateKey",
-                        "name": "PRIVATE-KEY",
+                        "description": "secretKey",
+                        "name": "SECRET_KEY",
                         "in": "header",
                         "required": true
                     },
@@ -412,8 +412,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "privateKey",
-                        "name": "PRIVATE-KEY",
+                        "description": "secretKey",
+                        "name": "SECRET_KEY",
                         "in": "header",
                         "required": true
                     },
